--- a/service-resource/build.gradle
+++ b/service-resource/build.gradle
@@ -18,7 +18,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation group: 'org.hibernate.orm', name: 'hibernate-gradle-plugin', version: '6.0.0.Final'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     compileOnly 'org.projectlombok:lombok'
