--- a/service-resource/src/main/resources/application.yaml
+++ b/service-resource/src/main/resources/application.yaml
@@ -1,2 +1,13 @@
 server:
   port: 8080
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/resources
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+     ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
