--- a/service-resource/build.gradle
+++ b/service-resource/build.gradle
@@ -20,7 +20,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
-    implementation group: 'org.hibernate.orm', name: 'hibernate-gradle-plugin', version: '6.0.0.Final'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
@@ -28,6 +27,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.apache.tika:tika-parsers:1.20'
 }
 
 tasks.named('test') {
