--- a/service-resource/src/main/resources/application.yaml
+++ b/service-resource/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/resources
+    url: jdbc:postgresql://localhost:7002/resources
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
@@ -11,3 +11,5 @@ spring:
     hibernate:
      ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  servlet.multipart.max-file-size: 10MB
+  servlet.multipart.max-request-size: 10MB
