--- a/service-resource/build.gradle
+++ b/service-resource/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 group = 'by.tsarankou'
-version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
@@ -34,4 +33,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootJar {
+    archivesBaseName = "app"
 }
