--- a/service-song/build.gradle
+++ b/service-song/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 group = 'by.tsarankou'
-version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
@@ -33,4 +32,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+bootJar {
+    archivesBaseName = "app"
 }
