--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,30 @@
 version: "3.8"
 services:
+  localstack:
+    image: localstack/localstack:3.0.2
+    ports:
+      - "4566:4566"
+    restart: always
   resource-service:
     build: service-resource
     ports:
       - "8080:8080"
+    restart: always
+    environment:
+      - DATABASE_PASSWORD=${PASSWORD}
+      - DATABASE_URL=jdbc:postgresql://resources-db:5432/${RESOURCE_DB}
+      - DATABASE_USER=${USER}
     depends_on:
       - resources-db
   songs-service:
     build: service-song
-    ports:
-      - "8081:8080"
+    expose:
+      - "8080"
+    restart: always
+    environment:
+      - DATABASE_PASSWORD=${PASSWORD}
+      - DATABASE_URL=jdbc:postgresql://songs-db:5432/${SONGS_DB}
+      - DATABASE_USER=${USER}
     depends_on:
       - songs-db
   resources-db:
@@ -17,8 +32,10 @@ services:
     environment:
       - POSTGRES_PASSWORD=${PASSWORD}
       - POSTGRES_DB=${RESOURCE_DB}
+      - POSTGRES_USER=${USER}
     ports:
       - "7001:5432"
+    restart: always
     volumes:
       - /resources-db:/var/lib/postgresql/data
   songs-db:
@@ -26,7 +43,9 @@ services:
     environment:
       - POSTGRES_PASSWORD=${PASSWORD}
       - POSTGRES_DB=${SONGS_DB}
+      - POSTGRES_USER=${USER}
     ports:
       - "7002:5432"
+    restart: always
     volumes:
       - /songs-db:/var/lib/postgresql/data
