--- a/service-resource/build.gradle
+++ b/service-resource/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.apache.tika:tika-parsers:1.20'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation platform('software.amazon.awssdk:bom:2.21.33')
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:apache-client'
 }
 
 tasks.named('test') {
