--- a/service-resource/src/main/resources/application.yaml
+++ b/service-resource/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://resources-db:5432/resources
-    username: postgres
-    password: root
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
@@ -18,4 +18,9 @@ my:
      host: songs-service
      port: 8080
      endpoint: songs
-
+    s3:
+     url: http://localstack:4566
+     accessKey: fake_access_key
+     secretKey: fake_secret_key
+     bucket: com.tsarankou.my
+     region: us-west-1
