--- a/service-resource/build.gradle
+++ b/service-resource/build.gradle
@@ -12,6 +12,11 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+}
+
+ext {
+    set('springCloudVersion', "2023.0.0-RC1")
 }
 
 dependencies {
@@ -32,10 +37,18 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.21.33')
     implementation 'software.amazon.awssdk:s3'
     implementation 'software.amazon.awssdk:apache-client'
+    /* Discovery */
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 bootJar {
