--- a/service-resource/src/main/resources/application.yaml
+++ b/service-resource/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: resource-service
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USER}
@@ -11,6 +13,10 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   servlet.multipart.max-file-size: 10MB
   servlet.multipart.max-request-size: 10MB
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_URL}
 my:
   client:
     audio:
