--- a/service-song/src/main/resources/application.yaml
+++ b/service-song/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 spring:
+  application: songs-service
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USER}
@@ -9,3 +10,7 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_URL}
