--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name = 'belhard-msvc-tsarankou'
 include 'service-resource'
 include 'service-song'
 include 'service-discovery'
-include 'service-charlie'
+include 'resource-processor'
