--- a/service-song/src/main/resources/application.yaml
+++ b/service-song/src/main/resources/application.yaml
@@ -15,3 +15,8 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_CLIENT_URL}
+broker:
+  resource:
+    deletingResourceQueue: queue-delete-resource
+    topic: create-resource-topic
+    deletingResourceRouting: delete.resource.#
