--- a/service-song/src/main/resources/application.yaml
+++ b/service-song/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: songs-service
+  rabbitmq:
+      host: message-broker
+      username: guest
+      password: guest
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USER}
@@ -16,7 +20,7 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_CLIENT_URL}
 broker:
-  resource:
+  songs:
     deletingResourceQueue: queue-delete-resource
     topic: create-resource-topic
     deletingResourceRouting: delete.resource.#
